Replace kPreferHtmlOverPlugins feature checks with PluginUtils::ShouldPreferHtmlOverPlugins

This replaces occurences of base::FeatureList::IsEnabled(features::kPreferHtmlOverPlugins)
with PluginUtils::ShouldPreferHtmlOverPlugins which includes extra checks to
determine whether the feature should be enabled. PreferHtmlOverPlugins should
not be enabled if an enterprise setting is set because it currently doesn't
work correctly when the enterprise setting is set to ASK. The Profile has been
plumbed through to places where it's needed in order to make checking this
possible.

BUG=654072

Review-Url: https://codereview.chromium.org/2408613002
Cr-Commit-Position: refs/heads/master@{#424583}
(cherry picked from commit b512db8bfb5266fb346540e24bca1416eb9260a7)

Review URL: https://codereview.chromium.org/2415773002 .

Cr-Commit-Position: refs/branch-heads/2883@{#76}
Cr-Branched-From: 614d31daee2f61b0180df403a8ad43f20b9f6dd7-refs/heads/master@{#423768}