chrome/browser/ui/views/website_settings/website_settings_popup_view.cc
@@ -451,6 +451,7 @@ WebsiteSettingsPopupView::WebsiteSettingsPopupView(
     const security_state::SecurityStateModel::SecurityInfo& security_info)
     : content::WebContentsObserver(web_contents),
       BubbleDialogDelegateView(anchor_view, views::BubbleBorder::TOP_LEFT),
+      profile_(profile),
       header_(nullptr),
       separator_(nullptr),
       site_settings_view_(nullptr),
@@ -687,6 +688,7 @@ void WebsiteSettingsPopupView::SetPermissionInfo(
   for (const auto& permission : permission_info_list) {
     layout->StartRow(1, content_column);
     PermissionSelectorRow* selector = new PermissionSelectorRow(
+        profile_,
         web_contents() ? web_contents()->GetVisibleURL() : GURL::EmptyGURL(),
         permission);
     selector->AddObserver(this);
